<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fiptreatmentcompanion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_communitylinks"
        android:name="com.example.fiptreatmentcompanion.ui.communitylinks.CommunityLinksFragment"
        android:label="@string/menu_community_links"
        tools:layout="@layout/fragment_community_links" />

    <fragment
        android:id="@+id/nav_weight"
        android:name="com.example.fiptreatmentcompanion.ui.weight.WeightFragment"
        android:label="@string/menu_weight"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/nav_treatment"
        android:name="com.example.fiptreatmentcompanion.ui.treatment.TreatmentFragment"
        android:label="@string/menu_treatment"
        tools:layout="@layout/fragment_treatment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.fiptreatmentcompanion.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>